# Ugryumov-CS-Labs-2024

./: .gitignore  CMakeLists.txt  Gauss.cpp  Gauss.hpp  NonlinearEquationSolver.cpp  NonlinearEquationSolver.h  NumericArraySorting.cpp  NumericArraySorting.h  SolvingFunction.cpp  SolvingFunction.h  SolvingNonlinearEquation.cpp  SolvingNonlinearEquation.h  ThirdLabCode.cpp  ThirdLabCode.h  a.out  encryption.cpp  encryption.hpp  integralCalculation.cpp  integralCalculation.hpp  lab3.cpp  lab3.hpp  main.cpp  matrix.cpp  matrix.hpp  mdict.cpp  mdict.hpp  time.cpp
